chore: final lighthouse optimization (webp icons, audit script)

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,7 +33,7 @@ const socialLinks = [
         <div class="flex items-center justify-center md:justify-start gap-3 mb-4">
           <div class="relative">
             <div class="absolute inset-0 bg-gradient-to-r from-[var(--hydrogen-pink)] to-[var(--nitrogen-cyan)] rounded-xl blur-lg opacity-50"></div>
-            <img src="/images/icon.png" alt={t.brand?.name} class="relative w-12 h-12 rounded-xl" />
+            <img src="/images/icon.webp" alt={t.brand?.name} class="relative w-12 h-12 rounded-xl" />
           </div>
           <span class="font-bold text-xl">{t.brand?.name}</span>
         </div>
