--- a/src/components/LanguageRedirect.astro
+++ b/src/components/LanguageRedirect.astro
@@ -1,4 +1,4 @@
-<div id="lang-toast" class="fixed bottom-6 left-1/2 -translate-x-1/2 z-[100] w-[90vw] max-w-md hidden">
+<div id="lang-toast" class="fixed bottom-6 inset-x-4 z-[100] md:left-1/2 md:right-auto md:-translate-x-1/2 md:w-full md:max-w-md hidden">
   <div class="glass p-4 rounded-2xl shadow-2xl border border-[var(--hydrogen-pink)]/30 animate-reveal-up backdrop-blur-xl bg-[#030014]/90">
     <div class="flex flex-col gap-4">
       
