--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -32,7 +32,7 @@ const getIconPath = (type: string) => {
 };
 ---
 
-<section class="relative py-24 px-4">
+<section class="relative py-24 px-4 overflow-hidden">
   <div class="absolute inset-0 overflow-hidden pointer-events-none">
     <div class="nebula w-[500px] h-[500px] bg-accent/20 top-1/4 left-[-200px]"></div>
     <div class="nebula w-[400px] h-[400px] bg-accent-cyan/20 bottom-1/4 right-[-150px]"></div>
